[gd_scene load_steps=3 format=3 uid="uid://b80u1lqkud0yc"]

[ext_resource type="Script" path="res://scenes/debug/resource_viewers/aux_palette_viewer.gd" id="1_g2iok"]
[ext_resource type="Texture2D" uid="uid://cseyojwy6622n" path="res://art/square_16_16.png" id="2_ndgpt"]

[node name="aux_palette_viewer" type="Node2D"]
script = ExtResource("1_g2iok")

[node name="square" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_ndgpt")
centered = false

[node name="grid" type="Node2D" parent="."]
position = Vector2(0, 83)

[node name="ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="ui"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="slider" type="HSlider" parent="ui/VBoxContainer"]
layout_mode = 2

[node name="label_index" type="Label" parent="ui/VBoxContainer"]
layout_mode = 2
text = "index_info
"

[node name="label_cursor" type="Label" parent="ui"]
layout_mode = 2
offset_top = 50.0
offset_right = 150.0
offset_bottom = 76.0
text = "cursor_info"

[connection signal="value_changed" from="ui/VBoxContainer/slider" to="." method="_on_slider_value_changed"]
